--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "845986f0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,19 @@
     "#Load matlab workspaces with full-featured analysis (including ripples and SCEs) of sleep session alone \n",
     "#and with place fields of that neurons in awake session\n",
     "sleep_mat = loadmat(root + 'SleepPOST_all_data_new_CNMF.mat')\n",
-    "pf_mat = loadmat(root + 'Neurons_PFs_new_CNMF.mat')"
+    "pf_mat = loadmat(root + 'Neurons_PFs_new_CNMF.mat')\n",
+    "awake_mat = loadmat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aea8e26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot distributions of SNR, neuronal area, total PF width for all neurons and repeatability + PF width for all PFs \n",
+    "\n"
    ]
   },
   {
@@ -895,7 +907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -909,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
