--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "845986f0",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "import matplotlib.cm as cm\n",
     "from matplotlib.backends.backend_pdf import PdfPages\n",
     "from sklearn.manifold import TSNE\n",
-    "import hdbscan\n",
+    "import sklearn.cluster as hdbscan\n",
+    "#import hdbscan\n",
     "from spot import spot, tools\n",
     "from scipy.io import loadmat\n",
     "from scipy import ndimage"
@@ -45,6 +46,14 @@
    "source": [
     "root = 'D:\\\\Work\\\\Sequence analysis\\\\'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d814e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -942,7 +951,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -956,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
