--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "845986f0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,8 @@
     "#import hdbscan\n",
     "from spot import spot, tools\n",
     "from scipy.io import loadmat\n",
-    "from scipy import ndimage"
+    "from scipy import ndimage\n",
+    "from scipy.stats import median_abs_deviation as mad"
    ]
   },
   {
@@ -49,15 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "67d814e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "93bbcd97",
    "metadata": {},
    "outputs": [],
@@ -66,7 +59,51 @@
     "#and with place fields of that neurons in awake session\n",
     "sleep_mat = loadmat(root + 'SleepPOST_all_data_new_CNMF.mat')\n",
     "pf_mat = loadmat(root + 'Neurons_PFs_new_CNMF.mat')\n",
-    "nNeurons = pf_mat['Neurons']['PFs'][0, 0].shape[0]"
+    "nNeurons = pf_mat['Neurons']['PFs'][0, 0].shape[0]\n",
+    "awake_mat = loadmat(root + 'Results.mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "56327817-6871-4942-875d-c165527ec2f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(121, 96772)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "af4ae6f8-6c93-481a-9d34-df07f48b5da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plot neuron-wise distributions of noize level (in MADs) and neural size (in pixels)\n",
+    "A = awake_mat['results']['A'][0,0].todense()\n",
+    "size_distib = [np.count_nonzero(A[:,cell]) for cell in range(nNeurons)] \n",
+    "mad_distrib = mad(awake_mat['results']['C_raw'][0,0], \n",
+    "\n",
+    "fig, axes = plt.subplots(1,2, sharey = True)\n",
+    "\n",
+    "axes[0].hist(mad_distrib)\n",
+    "axes[0].set_title('MAD distribution')\n",
+    "axes[0].set_ylabel('Neurons')\n",
+    "axes[0].set_xlabel('MAD')\n",
+    "\n",
+    "axes[1].hist(size_distib)\n",
+    "axes[1].set_title('Neural size distribution')\n",
+    "axes[1].set_xlabel('Size, pixels')\n"
    ]
   },
   {
@@ -951,7 +988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -965,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
