--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "845986f0",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "85c967bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = 'D:\\\\Sequences\\\\'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "93bbcd97",
    "metadata": {},
    "outputs": [],
@@ -60,7 +70,51 @@
     "sleep_mat = loadmat(root + 'SleepPOST_all_data_new_CNMF.mat')\n",
     "pf_mat = loadmat(root + 'Neurons_PFs_new_CNMF.mat')\n",
     "nNeurons = pf_mat['Neurons']['PFs'][0, 0].shape[0]\n",
-    "awake_mat = loadmat(root + 'Results.mat')"
+    "#awake_mat = loadmat(root + 'Results.mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ed7a4943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "black_list = [[20,26,36,43,48,55,62,64,68,70,74,77,81,89,91,93,96,97,98,100,104,105,106,108,109,110,111,112,113,114,116,120],[8,20,26,27,29,34,39,42,48,55,70,73,74,76,83,89,95,96,97,98,100,101,109,110,111,112,113,114,116,120]] #list of place cells not be included in the analysis (both directions, all fields, MATLAB numeration)\n",
+    "white_list = [[],[5,9,30]] #list of place cells to be included in the analysis (both directions, all fields, MATLAB numeration)\n",
+    "pc_list = []\n",
+    "for i_dir in range(2):\n",
+    "    for i_neur in range(nNeurons):\n",
+    "        if np.any(pf_mat['Neurons']['isPC'][0, 0][i_neur, 0][i_dir], axis = 0) and i_neur+1 not in black_list[i_dir] or i_neur+1 in white_list[i_dir]:\n",
+    "            pc_list.append(i_neur)\n",
+    "pc_list = np.unique(pc_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a98a0c68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,\n",
+       "        14,  15,  16,  17,  18,  19,  21,  22,  23,  24,  25,  27,  28,\n",
+       "        29,  30,  32,  33,  34,  35,  36,  37,  38,  39,  40,  41,  43,\n",
+       "        44,  45,  46,  47,  49,  50,  51,  52,  53,  54,  56,  57,  58,\n",
+       "        59,  60,  61,  62,  63,  65,  66,  67,  68,  69,  71,  72,  73,\n",
+       "        75,  77,  79,  80,  81,  82,  83,  84,  85,  88,  90,  91,  92,\n",
+       "        94,  95,  99, 102, 103, 106, 107, 108, 117, 118, 119, 121])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pc_list+1"
    ]
   },
   {
@@ -1025,7 +1079,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1039,7 +1093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
