Spearman ranking test option added; manual cherrypicking added

--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "845986f0",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "from scipy.io import loadmat\n",
     "from scipy import ndimage\n",
     "from scipy.stats import median_abs_deviation as mad\n",
-    "from scipy.stats import kendalltau"
+    "from scipy.stats import kendalltau\n",
+    "from scipy.stats import spearmanr\n"
    ]
   },
   {
@@ -200,11 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "816fe5f2-abcb-42de-ac2a-7d3b53289b2b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Brutal manual cherrypicking\n",
+    "pc_list = np.array([1,2,4,5,7,11,15,19,20,22,23,25,30,33,35,37,38,40,43,48,49,50,51,53,54,56,57,59,61,63,65,66,70,71,72,78,82,86,90,94])-1"
+   ]
   },
   {
    "cell_type": "code",
@@ -563,7 +567,7 @@
     }
    ],
    "source": [
-    "#Sort epochs by Kendall's Tau Sortedness measure\n",
+    "#Sort epochs by Kendall's Tau Sortedness measure OR by \n",
     "ep_order = []\n",
     "for cl in clusters:\n",
     "    ep_sortedness = []\n",
@@ -572,6 +576,7 @@
     "        cim = [np.mean(spike_times[row[0]:row[1]]) for row in epoch] \n",
     "        neur_order = np.argsort(cim)\n",
     "        ep_sortedness.append(kendalltau(neur_order, col_order)[0])\n",
+    "        #ep_sortedness.append(spearmanr(neur_order, col_order).correlation)\n",
     "    ep_order.append(np.argsort(ep_sortedness))"
    ]
   },
