--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "845986f0",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "93bbcd97",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "816fe5f2-abcb-42de-ac2a-7d3b53289b2b",
    "metadata": {},
    "outputs": [],
@@ -212,18 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "d685743c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vsots\\anaconda3\\envs\\spot\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3373: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "C:\\Users\\vsots\\anaconda3\\envs\\spot\\lib\\site-packages\\numpy\\core\\_methods.py:170: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m ispcs \u001b[38;5;241m=\u001b[39m pf_mat[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNeurons\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124misPC\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m][i_neur, \u001b[38;5;241m0\u001b[39m][i_dir]\n\u001b[1;32m     15\u001b[0m stabs \u001b[38;5;241m=\u001b[39m pf_mat[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNeurons\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStab\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m][i_neur, \u001b[38;5;241m0\u001b[39m][i_dir]\n\u001b[0;32m---> 16\u001b[0m distr \u001b[38;5;241m=\u001b[39m pf_mat[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNeurons\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNormedSummedPlaceActivity\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m][i_neur, \u001b[38;5;241m0\u001b[39m][i_dir][\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     17\u001b[0m neur \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     18\u001b[0m tot_width \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
      ]
     }
    ],
@@ -242,8 +243,8 @@
     "    for i_neur in pc_list:\n",
     "        pfs = pf_mat['Neurons']['PFs'][0, 0][i_neur, 0][i_dir]\n",
     "        ispcs = pf_mat['Neurons']['isPC'][0, 0][i_neur, 0][i_dir]\n",
-    "        stabs = pf_mat['Neurons']['Stab'][0, 0][i_neur][0][i_dir]\n",
-    "        distr = pf_mat['Neurons']['NormedSummedPlaceActivity'][0,0][0,i_neur][i_dir][0]\n",
+    "        stabs = pf_mat['Neurons']['Stab'][0, 0][i_neur, 0][i_dir]\n",
+    "        distr = pf_mat['Neurons']['NormedSummedPlaceActivity'][0,0][0, i_neur][i_dir][0]\n",
     "        neur = []\n",
     "        tot_width = 0\n",
     "        for pf, ispc, stab in zip(pfs, ispcs, stabs):  #loop for all PFs of a neuron i_neur in direction i_dir \n",
@@ -252,11 +253,35 @@
     "                stab_distrib.append(stab[0][0][0])\n",
     "                width_distrib.append(len(pf[0][0]))  \n",
     "                tot_width += len(pf[0][0])\n",
-    "        pfcm_dir.append(np.mean(neur))\n",
+    "\n",
+    "        cm = 0 if not neur else ndimage.center_of_mass([distr[i] for i in neur])[0]\n",
+    "        #pfcm_dir.append(np.mean(neur)) \n",
+    "        pfcm_dir.append(cm)\n",
     "        pfdistrib_dir.append(distr)\n",
     "        tot_width_distrib.append(tot_width)\n",
     "    pfcm.append(pfcm_dir)\n",
     "    pfdistrib.append(pfdistrib_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "710d8151-3682-4c31-959f-c030e9de58e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neur"
    ]
   },
   {
@@ -1183,7 +1208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1197,7 +1222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
