--- a/Sequence_Analysis.ipynb
+++ b/Sequence_Analysis.ipynb
@@ -28,7 +28,7 @@
     "from scipy.stats import median_abs_deviation as mad\n",
     "from scipy.stats import kendalltau\n",
     "from scipy.stats import spearmanr\n",
-    "#test"
+    "#test2"
    ]
   },
   {
